# Overdrive-release

./: .gitignore  CONTRIBUTING.md  Readme.md  SECURITY.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: issue-welcome.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/web/local/: abrp.html  events.html  index.html  mqtt.html  performance.html  recording.html  surveillance.html  trips.html
app/src/main/assets/web/shared/: abrp.js  auth.js  core.js  mqtt.js  performance.js  recording.js  safe-locations.js  styles.css  surveillance.js  trips.js
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/surveillance/: motion_pipeline_v2.cpp  motion_pipeline_v2.h  texture_tracker.cpp  texture_tracker.h
app/src/main/java/android/hardware/: IBYDCameraService.java  IBYDCameraUser.java
app/src/main/java/android/hardware/bydauto/: BYDAutoFeatureIds.java
app/src/main/java/com/overdrive/app/: OverdriveApplication.kt
app/src/main/java/com/overdrive/app/abrp/: AbrpTelemetryService.java  SohEstimator.java
app/src/main/java/com/overdrive/app/ai/: YoloDetector.kt
app/src/main/java/com/overdrive/app/byd/: BydDataCollector.java  BydDeviceHelper.java  BydFeatureIds.java  BydVehicleData.java
app/src/main/java/com/overdrive/app/byd/cloud/: BydCloudClient.java  BydCloudConfig.java  BydCloudDeterrent.java  BydCloudSession.java  BydCloudTransport.java
app/src/main/java/com/overdrive/app/camera/: AvmCameraHelper.java  BinderCameraBackend.java  BydCameraCoordinator.java  BydCameraUser.java  EGLCore.java  PanoramicCameraGpu.java
app/src/main/java/com/overdrive/app/config/: UnifiedConfigManager.kt
app/src/main/java/com/overdrive/app/daemon/: AccSentryDaemon.java  CameraDaemon.java  DaemonBootstrap.java  GlobalProxyDaemon.java  PermissionGranter.java  SentryDaemon.java  TelegramBotDaemon.java
app/src/main/java/com/overdrive/app/daemon/management/: DaemonManager.kt
app/src/main/java/com/overdrive/app/daemon/telegram/: DaemonCommandHandler.java  SystemCommandHandler.java
app/src/main/java/com/overdrive/app/launcher/: DaemonLauncher.kt  ZrokLauncher.kt
app/src/main/java/com/overdrive/app/logging/: DaemonLogConfig.java  DaemonLogger.java
app/src/main/java/com/overdrive/app/monitor/: BaseDeviceMonitor.java  BatteryPowerMonitor.java  BatterySocMonitor.java  BatteryThermalData.java  BatteryVoltageMonitor.java  ChargingStateData.java  ChargingStateMonitor.java  DrivingRangeMonitor.java  GearMonitor.java  GpsMonitor.java  SocHistoryDatabase.java  VehicleDataMonitor.java
app/src/main/java/com/overdrive/app/mqtt/: MqttConnectionConfig.java  MqttConnectionManager.java  MqttConnectionStore.java  MqttPublisherService.java  ProxyHelper.java
app/src/main/java/com/overdrive/app/overlay/: SetupGuideDialog.java  StatusOverlayService.java
app/src/main/java/com/overdrive/app/receiver/: BootReceiver.kt
app/src/main/java/com/overdrive/app/recording/: RecordingModeManager.java
app/src/main/java/com/overdrive/app/server/: AuthMiddleware.java  BydCloudApiHandler.java  HttpResponse.java  HttpServer.java  MqttApiHandler.java  PerformanceApiHandler.java  QualitySettingsApiHandler.java  RecordingsApiHandler.java  StreamingApiHandler.java  SurveillanceApiHandler.java  SurveillanceIpcServer.java  TcpCommandServer.java
app/src/main/java/com/overdrive/app/services/: DaemonKeepaliveService.kt  LocationSidecarService.java
app/src/main/java/com/overdrive/app/storage/: StorageManager.java
app/src/main/java/com/overdrive/app/streaming/: GpuStreamScaler.java
app/src/main/java/com/overdrive/app/surveillance/: CrossQuadrantTracker.java  DetectionBaseline.java  EventTimelineCollector.java  FoveatedCropper.java  GpuDownscaler.java  GpuMosaicRecorder.java  GpuSurveillancePipeline.java  HardwareEventRecorderGpu.java  MotionPipelineV2.java  NativeMotion.java  SurveillanceConfig.java  SurveillanceConfigManager.kt  SurveillanceEngineGpu.java
app/src/main/java/com/overdrive/app/telemetry/: OverlayBitmapRenderer.java  OverlayDoubleBuffer.java  TelemetryDataCollector.java
app/src/main/java/com/overdrive/app/trips/: OdometerReader.java  RangeEstimator.java  TripAnalyticsManager.java  TripApiHandler.java  TripDatabase.java  TripDetector.java  TripRecord.java  TripScoreEngine.java  TripTelemetryRecorder.java
app/src/main/java/com/overdrive/app/ui/: MainActivity.kt
app/src/main/res/drawable/: ic_camera_probe.xml  ic_mqtt.xml  ic_overlay_rec_active.xml  ic_overlay_rec_inactive.xml  ic_overlay_trip_active.xml  ic_overlay_trip_inactive.xml  ic_traffic_monitor.xml  overlay_action_button_bg.xml  overlay_expanded_background.xml  overlay_pill_background.xml
app/src/main/res/layout/: activity_main_new.xml  dialog_setup_guide.xml  dialog_zrok_token.xml  fragment_dashboard.xml  fragment_logs.xml  item_daemon_card.xml  overlay_status.xml
app/src/main/res/layout-land/: activity_main_new.xml
app/src/main/res/menu/: drawer_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: file_paths.xml
(+17 files in other folders)
